Added NHL mocked unit test, fixed API call race condition, and added injury status for all sports
